# duckdb-oracle-connector

./: .gitignore  README.md  main.py  oracle_data_loader.py  oracle_query.py  pyproject.toml
