[project]
name = "oracle-connector-to-duckdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adbc-driver-flightsql>=1.7.0",
    "adbc-driver-manager>=1.7.0",
    "duckdb>=1.3.2",
    "flightsql-dbapi>=0.2.2",
    "oracledb>=3.3.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
]
